Bug 482141 - On X11, playing media no longer blocks automatic screen turns off or other inactivity settings
Summary: On X11, playing media no longer blocks automatic screen turns off or other in...
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 482327 482354 482935 483087 483123 483207 483694 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-01 11:53 UTC by jmeron1991
Modified: 2024-03-15 22:36 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jmeron1991 2024-03-01 11:53:16 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

After updating to KDE 6 playing videos, on youtube, VLC, etc. no longer counts as activity, and my screen gets turned off as per my inactivity settings in the Energy Saving settings.

STEPS TO REPRODUCE
1. Update to KDE neon 6 using discover
2. Reinstalling plasma-desktop and other dependencies as per https://bugs.kde.org/show_bug.cgi?id=481988
3. Adding files to /usr/share/dbus-1/services/ as per https://bugs.kde.org/show_bug.cgi?id=481938, https://bugs.kde.org/show_bug.cgi?id=481940

OBSERVED RESULT
Screen turns of after a set time period even though I'm watching a video.

EXPECTED RESULT
Screen will not turn off if I'm watching a video.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon 6.0
(available in About System)
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
Comment 1 Patrick Silva 2024-03-01 14:24:05 UTC
Cannot reproduce on Arch Linux by playing a video with VLC, Haruna, SMPlayer and Vivaldi browser.

Operating System: Arch Linux 
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Graphics Platform: Wayland
Comment 2 Nate Graham 2024-03-01 21:13:54 UTC
Also cannot reproduce on Fedora 39 with Plasma 6 built from source on top of it. Can you update Neon and try again? There were some packaging glitches with the initial 6.0 release that might account for this.
Comment 3 jmeron1991 2024-03-02 18:05:16 UTC
My system is up to date according to pkcon.

I'm using X11 as my graphics platform if that makes a difference.
Comment 4 Patrick Silva 2024-03-03 18:16:17 UTC
Can reproduce on X11. Despite the power management applet says that VLC is blocking sleep and screen locking, the screen becomes black during playback. The mouse pointer remains visible.

Operating System: Arch Linux 
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Graphics Platform: X11
Comment 5 Patrick Silva 2024-03-03 18:16:41 UTC
*** Bug 482327 has been marked as a duplicate of this bug. ***
Comment 6 Patrick Silva 2024-03-04 12:06:19 UTC
*** Bug 482354 has been marked as a duplicate of this bug. ***
Comment 7 Patrick Silva 2024-03-09 21:35:33 UTC
*** Bug 482935 has been marked as a duplicate of this bug. ***
Comment 8 A. Kelly 2024-03-10 20:55:37 UTC
I can also reproduce this on X11. In the battery and brightness applet it says that multiple apps are blocking sleep and locking but it still turns off the screen while watching videos.
I'll try switching to a Wayland session soon to confirm whether it happens there as well.

Operating System: Arch Linux 
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.6.21-1-lts (64-bit)
Graphics Platform: X11
Comment 9 Nicolas Fella 2024-03-11 08:49:05 UTC
*** Bug 483207 has been marked as a duplicate of this bug. ***
Comment 10 Nicolas Fella 2024-03-11 08:54:50 UTC
*** Bug 483123 has been marked as a duplicate of this bug. ***
Comment 12 Jakub Gocoł 2024-03-11 17:57:07 UTC
merge request with the fix:
https://invent.kde.org/plasma/powerdevil/-/merge_requests/334
Comment 13 Jakub Gocoł 2024-03-11 21:44:06 UTC
Git commit 8effa40735b4d98f0554f97b41f103e7e8f9c65c by Jakub Gocoł.
Committed on 11/03/2024 at 20:09.
Pushed by nicolasfella into branch 'master'.

Check if idle inhibitor is active before blanking the screen

This was accidently removed during refactor of this area.

This fixes regression introduced in e9c984a78c9ace207f98922d018ea3ef58ea7cd3

M  +4    -6    daemon/actions/bundled/dpms.cpp

https://invent.kde.org/plasma/powerdevil/-/commit/8effa40735b4d98f0554f97b41f103e7e8f9c65c
Comment 14 Nicolas Fella 2024-03-11 21:47:44 UTC
Git commit 37c4434511c0281b991ac3b9a6b39884f7e4e993 by Nicolas Fella, on behalf of Jakub Gocoł.
Committed on 11/03/2024 at 21:46.
Pushed by nicolasfella into branch 'Plasma/6.0'.

Check if idle inhibitor is active before blanking the screen

This was accidently removed during refactor of this area.

This fixes regression introduced in e9c984a78c9ace207f98922d018ea3ef58ea7cd3
(cherry picked from commit 8effa40735b4d98f0554f97b41f103e7e8f9c65c)

M  +4    -6    daemon/actions/bundled/dpms.cpp

https://invent.kde.org/plasma/powerdevil/-/commit/37c4434511c0281b991ac3b9a6b39884f7e4e993
Comment 15 ratijas 2024-03-11 22:04:49 UTC
*** Bug 483087 has been marked as a duplicate of this bug. ***
Comment 16 Patrick Silva 2024-03-15 19:32:28 UTC
*** Bug 483694 has been marked as a duplicate of this bug. ***
Comment 17 Philippe ROUBACH 2024-03-15 21:47:38 UTC
Also, manually blocking does not work.
Comment 18 Jakob Petsovits 2024-03-15 22:36:27 UTC
(In reply to Philippe ROUBACH from comment #17)
> Also, manually blocking does not work.

Given that this is marked RESOLVED FIXED, anyone still commenting on things that do not work, please also mention whether you've already upgraded to 6.0.2 which contains that fix.