Check if idle inhibitor is active before blanking the screen

This was accidently removed during refactor of this area.

This fixes regression introduced in e9c984a78c9ace207f98922d018ea3ef58ea7cd3

BUG: 482141
(cherry picked from commit 8effa40735b4d98f0554f97b41f103e7e8f9c65c)